tests/compilation_error/duplicate_global_variable.ll
global int s
global int s

print "hi" // a valid program must have at least one instruction
